--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,4 @@
-<! DOCTYPE html> <html> <body> <h1>My First Heading</h1> <p>My first paragraph.</ p> </body> </html> 
+<! DOCTYPE html> <html> <body> <h1>My First Heading</h1> <p>My first paragraph.</ p> 
+
+<script src="app.js"></script>
+</body> </html> 
